--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
@@ -69,10 +69,10 @@
   由于 `tbl1` 和 `tbl2` 的分区方式一致，所以 `SHARDING` 属性可以更改为 `PARTITION` 或 `ADAPTIVE`。
   
   ```shell
-  obclient> ALTER TABLEGROUP tblgroup1 SHARDING = "PARTITION";
+  obclient> ALTER TABLEGROUP tblgroup1 SHARDING = 'PARTITION';
   Query OK, 0 rows affected
 
-  obclient> ALTER TABLEGROUP tblgroup1 SHARDING = "ADAPTIVE";
+  obclient> ALTER TABLEGROUP tblgroup1 SHARDING = 'ADAPTIVE';
   Query OK, 0 rows affected
    ```
 
@@ -100,11 +100,11 @@
   由于表组 `tblgroup2` 中包含非分区表和分区表，所以 `SHARDING` 属性不能更改为 `PARTITION` 或 `ADAPTIVE`。
   
   ```shell
-  obclient> ALTER TABLEGROUP tblgroup2 SHARDING = "PARTITION";
-  ERROR 4179 (HY000): Operation not allowed now
+  obclient> ALTER TABLEGROUP tblgroup2 SHARDING = 'PARTITION';
+  ERROR 4179 (HY000): not all tables are non-partitioned or partitioned, modify tablegroup sharding attribute not allowed
 
-  obclient> ALTER TABLEGROUP tblgroup2 SHARDING = "ADAPTIVE";
-  ERROR 4179 (HY000): Operation not allowed now
+  obclient> ALTER TABLEGROUP tblgroup2 SHARDING = 'ADAPTIVE';
+  ERROR 4179 (HY000): not all tables are non-partitioned or partitioned, modify tablegroup sharding attribute not allowed
   ```
 
 * 创建名为 `tblgroup3` 的表组，其 `SHARDING` 属性为 `NONE`，向表组中添加分区表 `tbl1` 和分区表 `tbl2`。
@@ -145,11 +145,11 @@
   由于表组 `tblgroup3` 中 `tbl1` 和 `tbl2` 的二级分区个数不同，所以 `SHARDING` 属性可以更改为`PARTITION`，但是不能更改为 `ADAPTIVE`。
 
   ```shell
-  obclient> ALTER TABLEGROUP tblgroup3 SHARDING = "PARTITION";
+  obclient> ALTER TABLEGROUP tblgroup3 SHARDING = 'PARTITION';
   Query OK, 0 rows affected
 
-  obclient> ALTER TABLEGROUP tblgroup3 SHARDING = "ADAPTIVE";
-  ERROR 4179 (HY000): Operation not allowed now
+  obclient> ALTER TABLEGROUP tblgroup3 SHARDING = 'ADAPTIVE';
+  ERROR 4179 (HY000): subpartition num not matched, modify tablegroup sharding attribute not allowed
   ```
 
 * 创建名为 `tblgroup4` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，修改表组中表 `tbl1` 和表 `tbl2` 的分区个数，则表组中所有表此时分区方式不一致，表组中不能加入新的表 `tbl3`。
@@ -200,7 +200,7 @@
   Query OK, 0 rows affected
  
   obclient> ALTER TABLEGROUP tblgroup4 ADD tbl3;
-  ERROR 4179 (HY000): Operation not allowed now
+  ERROR 4179 (HY000): partition num not equal, add table to tablegroup not allowed
   ```
 
 ## 相关文档 
