--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.create-tablegroup-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.create-tablegroup-of-mysql-mode.md
@@ -110,7 +110,7 @@ tablegroup_option:
          PARTITION p1 VALUES IN (5, 6),
          PARTITION p2 VALUES IN (DEFAULT)
          );
-  ERROR 4179 (HY000): Operation not allowed now
+  ERROR 4179 (HY000): not all tables are non-partitioned or partitioned, add table to tablegroup not allowed
   ```
 
 * 创建名为 `tblgroup4` 的表组，其 `SHARDING` 属性为 `PARTITION`，分区表 `tbl1` 和分区表 `tbl2` 的分区值不一致，不能同时加入到表组中。
@@ -133,7 +133,7 @@ tablegroup_option:
          PARTITION p1 VALUES IN (5, 7),
          PARTITION p2 VALUES IN (DEFAULT)
          );
-   ERROR 4179 (HY000): Operation not allowed now
+  ERROR 4179 (HY000): list_part partition value not equal, add table to tablegroup not allowed
   ```
 
 * 创建名为 `tblgroup5` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，并将分区表 `tbl1` 和分区表 `tbl2` 加入到表组中，两者的分区方式一致。
@@ -190,7 +190,7 @@ tablegroup_option:
             SUBPARTITION mp4 VALUES in ('02'),
             SUBPARTITION mp5 VALUES in ('03'))
          );
-  ERROR 4179 (HY000): Operation not allowed now
+  ERROR 4179 (HY000): not all tables are non-partitioned or partitioned, add table to tablegroup not allowed
   ```
 
 * 创建名为 `tblgroup7` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，由于分区表 `tbl1` 和分区表 `tbl2` 的分区个数不同，不能同时加入到表组中。
@@ -222,7 +222,7 @@ tablegroup_option:
            (SUBPARTITION mp3 VALUES in ('01'),
             SUBPARTITION mp4 VALUES in ('02'))
          );
-  ERROR 4179 (HY000): Operation not allowed now
+  ERROR 4179 (HY000): subpartition num not matched, add table to tablegroup not allowed
   ```
 
 ## 相关文档 
