--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
@@ -105,7 +105,7 @@ tablegroup_option:
       (PARTITION p0 VALUES ('01'),
        PARTITION p1 VALUES ('02')
        );
-  ORA-00600: internal error code, arguments: -4179, Operation not allowed now
+  ORA-00600: internal error code, arguments: -4179, not all tables are non-partitioned or partitioned, add table to tablegroup not allowed
   ```
 
 * 创建名为 `tblgroup4` 的表组，其 `SHARDING` 属性为 `PARTITION`，分区表 `tbl1` 和分区表 `tbl2` 的分区值不一致，不能同时加入到表组中。
@@ -127,7 +127,7 @@ tablegroup_option:
          PARTITION p1 VALUES ('02'),
          PARTITION p2 VALUES ('03')
          );
-   ORA-00600:internal error code, arguments: -5280, Duplicate partition name
+  ORA-00600: internal error code, arguments: -4179, partition num not equal, add table to tablegroup not allowed
   ```
 
 * 创建名为 `tblgroup5` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，并将分区表 `tbl1` 和分区表 `tbl2` 加入到表组中，两者的分区方式一致。
@@ -180,7 +180,7 @@ tablegroup_option:
         (PARTITION p0 VALUES('01'),
          PARTITION p1 VALUES('02')
         );
-  ORA-00600: internal error code, arguments: -4179, Operation not allowed now
+  ORA-00600: internal error code, arguments: -4179, not all tables are non-partitioned or partitioned, add table to tablegroup not allowed
   ```
 
 * 创建名为 `tblgroup7` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，由于分区表 `tbl1` 和分区表 `tbl2` 的分区个数不同，不能同时加入到表组中。
@@ -210,7 +210,7 @@ tablegroup_option:
         (PARTITION p0 VALUES('01'),
          PARTITION p1 VALUES('02')
         );
-  ORA-00600: internal error code, arguments: -4179, Operation not allowed now
+  ORA-00600: internal error code, arguments: -4179, subpartition num not matched, add table to tablegroup not allowed
   ```
 
 ## 相关文档 
