--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.1.disk-performance-calibration-of-mysql-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.1.disk-performance-calibration-of-mysql-mode.md
@@ -361,3 +361,9 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    * `IOPS`：表示每秒钟完成 I/O 请求的数量。
    * `MBPS`：表示磁盘带宽，单位为 MB/s。
    * `LATENCY`：表示磁盘响应时间，单位为 us。
+
+## 相关文档
+
+* [配置用户级资源隔离](2.resource-isolation-at-user-level-of-mysql-mode.md)
+
+* [配置 SQL 级资源隔离](3.resource-isolation-at-sql-level-of-mysql-mode.md)
