--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
@@ -10,6 +10,10 @@
 
   如果仅需要控制 IOPS 的资源隔离，则不需要配置 cgroup。
 
+* 在进行 IOPS 资源隔离前，需要先进行磁盘性能校准，磁盘性能校准的相关操作请参见 [磁盘性能校准](2.1.disk-performance-calibration-of-oracle-mode.md)。
+
+  如果仅需要控制 CPU 的资源隔离，则不需要进行磁盘性能校准。
+
 * 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/1.create-a-user-of-oracle-mode.md)。
 
 ## 背景信息
