--- a/zh-CN/1.oceanbase-database-overview/1.what-is-oceanbase-database.md
+++ b/zh-CN/1.oceanbase-database-overview/1.what-is-oceanbase-database.md
@@ -14,7 +14,7 @@ OceanBase 数据库以 7.07 亿 tpmC 的性能数据位居 TPC-C 在线交易处
 
 ### 高兼容
 
-高度兼容 MySQL，覆盖绝大多数常见功能，支持过程语言、触发器等高级特性，提供自动迁移工具，支持迁移评估和反向同步以保障数据迁移安全，可支撑金融、政府、运营商等关键行业核心场景替代。
+高度兼容 MySQL，覆盖绝大多数常见功能，支持过程语言、触发器等高级特性，提供自动迁移工具，并支持反向同步以保障数据迁移安全，可支撑金融、政府、运营商等关键行业核心场景替代。
 
 ### 水平扩展
 
