400use：AliOS change to Alibaba Cloud Linux and modify ob_query_timeout Default value

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
@@ -301,12 +301,6 @@ obclient> SELECT * FROM personal_info;
 
 Range 分区和 Range Columns 分区都是按照每个分区建立的分区键值范围来划分分区。通常适用于对分区键需要按照范围的查询。例如，按照时间字段或者价格区间等进行范围分区。
 
-Range 分区 和 Range Columns 分区的区别如下：
-
-* Range 分区的分区键必须是整数类型，如果对日期字段分区，则需要使用函数进行转换。例如，针对 date 字段进行分区时，要使用 `YEAR()` 函数进行转换。而 Range Columns 分区的分区键不要求是整数，可以是任意类型。
-
-* Range 分区的分区键可以写表达式，但不能是列（列向量），例如，不能写 `partition by range(c1, c2)`。Range Columns 分区的分区键不能写表达式，但是可以是多列（列向量）。
-
 Range 分区和 Range Columns 分区使用 `VALUES LESS THAN(value)` 关键字来定义每个分区，其中 `value` 的值只能是连续不重叠的从小到大的值。
 
 示例 8：创建 Range Columns 分区表。
@@ -321,19 +315,13 @@ obclient> CREATE TABLE tb1_rc(col1 INT,col2 INT)
 Query OK, 0 rows affected
 ```
 
-示例 8 中，由于 Range Columns 分区的分区键可以是任意类型，可以使用 `col1` 列名作为分区键，分区表 `tb1_rc` 将会按照 `100、200、300` 的数值范围进行分区。`p0、p1、p2` 为指定的分区名，可以自定义，只需要满足同一个表中每个分区名不重复即可。
+示例 8 中，由于 Range Columns 分区的分区键使用 `col1` 列名作为分区键，分区表 `tb1_rc` 将会按照 `100、200、300` 的数值范围进行分区。`p0、p1、p2` 为指定的分区名，可以自定义，只需要满足同一个表中每个分区名不重复即可。
 
 **List 分区/List Columns 分区**
 
 List 分区是根据具体的数值分区，每个分区的数值不重叠。List 分区的优点是可以方便的对无序或无关的数据集进行分区。
 
 如果要使用多列的 List 分区，或者其他数据类型的 List 分区，可以使用 List Columns 分区。List Columns 分区是 List 分区的一个扩展，支持多个分区键，并且支持 INT 数据、DATE 类型和 DATETIME 类型。
-
-List 分区和 List Columns 分区的区别如下：
-
-* List 分区的分区键必须是整数类型，List Columns 分区的分区键可以是任意类型。
-
-* List 分区仅支持单分区键，其分区键可以是一列，也可以是表达式，List Columns 分区的分区键不能是表达式，但可以是多列（列向量）。
 
 List 分区和 List Columns 分区使用 `VALUES IN(value_list)` 关键字来定义每个分区。
 
