--- a/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
@@ -8,15 +8,15 @@
 
 |       Linux操作系统       |    版本   |             服务器架构         |
 |--------------------------|-----------|-------------------------------|
-| AliOS                    | 7.2 及以上   | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
+| Alibaba Cloud Linux      | 2，3   | x86_64，ARM_64 |
 | 龙蜥 AnolisOS            | 8.6 及以上   | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
 | KylinOS                  | V10         | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
 | 统信 UOS                 | V20         | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
 | 中科方德 NFSChina         | 4.0 及以上  | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
 | 浪潮 Inspur kos           | 5.8        | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
-| CentOS / Red Hat Enterprise Linux | 7.2 及以上 <blockquote><b>说明</b></br>暂不支持 CentOS 8.X。</blockquote>  | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
-| SUSE Enterprise Linux             | 12SP3 及以上 | x86_64（包括海光），ARM_64（仅支持鲲鹏、飞腾） |
-| Debian                            | 8.3 及以上   | x86_64（包括海光），ARM_64（仅支持鲲鹏、飞腾） |
+| CentOS / Red Hat Enterprise Linux | 7.2 及以上   | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
+| SUSE Enterprise Linux             | 12SP3 及以上 | x86_64（包括海光） |
+| Debian                            | 8.3 及以上   | x86_64（包括海光） |
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
