--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/4.modify-the-degradation-timeout.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/4.modify-the-degradation-timeout.md
@@ -22,7 +22,7 @@
 2. 查看租户仲裁服务的降级触发控制时间。
 
    ```sql
-   obclient [(none)]> SHOW PARAMETERS LIKE 'arbitration_timeout';
+   obclient [(none)]> SHOW PARAMETERS LIKE 'arbitration_timeout'\G
    *************************** 1. row ***************************
          zone: zone1
      svr_type: observer
