--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
@@ -30,7 +30,7 @@
    示例如下：
 
    ```shell
-   obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE tenant_name = 'oracle001';
+   obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE tenant_name = 'oracle001'\G
    *************************** 1. row ***************************
                     TENANT_ID: 1004
                   TENANT_NAME: oracle001
@@ -92,7 +92,7 @@
    示例如下：
 
    ```shell
-   obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE tenant_name = 'oracle001';
+   obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE tenant_name = 'oracle001'\G
    *************************** 1. row ***************************
                     TENANT_ID: 1004
                   TENANT_NAME: oracle001
