--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/20.lock-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/20.lock-table-of-oracle-mode.md
@@ -44,19 +44,19 @@ LOCK TABLE
 1. 创建二级分区表 `test`。其中，由 `SUBPARTITION TEMPLATE` 生成的二级分区名称为一级分区名称 + 's' + 二级分区模板名称，例如，`p0` 分区有二级分区 `p0ssp0`，`p0ssp1` 和 `p0ssp2`。
 
    ```shell
-   create table test(col1 int, col2 int)
-   partition by range (col1)
-   subpartition by range (col2)
-     subpartition template
+   CREATE TABLE TEST(col1 INT, col2 INT)
+   PARTITION BY RANGE (col1)
+   SUBPARTITION BY RANGE (col2)
+     SUBPARTITION TEMPLATE
        (
-       subpartition sp0 values less than (3),
-       subpartition sp1 values less than (6),
-       subpartition sp2 values less than (9)
+       SUBPARTITION sp0 VALUES LESS THAN (3),
+       SUBPARTITION sp1 VALUES LESS THAN (6),
+       SUBPARTITION sp2 VALUES LESS THAN (9)
        )
    (
-     partition p0 values less than (100),
-     partition p1 values less than (200),
-     partition p2 values less than (300)
+     PARTITION p0 VALUES LESS THAN (100),
+     PARTITION p1 VALUES LESS THAN (200),
+     PARTITION p2 VALUES LESS THAN (300)
    );
    ```
 
@@ -64,43 +64,49 @@ LOCK TABLE
 
    ```shell
    obclient> LOCK TABLE test IN EXCLUSIVE MODE;
+   Query OK, 0 rows affected
    ```
 
 3. 对表 `test` 的一级分区 `p1` 上互斥锁。
 
    ```shell
    obclient> LOCK TABLE test PARTITION (p1) IN EXCLUSIVE MODE;
+   Query OK, 0 rows affected
    ```
 
 4. 对表 `test` 的二级分区 `p1ssp1` 上互斥锁。
 
    ```shell
    obclient> LOCK TABLE test SUBPARTITION (p1ssp1) IN EXCLUSIVE MODE;
+   Query OK, 0 rows affected
    ```
 
 5. 对表 `test` 的多个分区上互斥锁。
 
    ```shell
    obclient> LOCK TABLE test PARTITION (p1，p2) IN EXCLUSIVE MODE;
+   Query OK, 0 rows affected
    ```
 
 6. 对表 `test` 的多个二级分区上互斥锁。
   
    ```shell
    obclient> LOCK TABLE test SUBPARTITION (p0ssp1，p1ssp2) IN EXCLUSIVE MODE;
+   Query OK, 0 rows affected
    ```
 
 7. 对表 `test` 的多个分区和二级分区上互斥锁。
 
    ```shell
-   obclient> LOCK TABLE test PARTITION (p1, p2), test SUBPARTITION (p3ssp0, p3ssp1) IN EXCLUSIVE MODE;
+   obclient> LOCK TABLE test PARTITION (p1, p2), test SUBPARTITION (p0ssp0, p0ssp1) IN EXCLUSIVE MODE;
+   Query OK, 0 rows affected
    ```
 
 8. 对表 `test` 不存在的分区上互斥锁。如下示例中 `p3` 分区不存在，但是 `p0` 分区也不会上锁成功，整条语句将回滚。
 
    ```shell  
    obclient> LOCK TABLE test PARTITION (p0, p3) IN EXCLUSIVE MODE;
-   ERROR HY000: Specified partition does not exist
+   ORA-02149: Specified partition does not exist
    ```
 
 9. 在两个客户端上分别对表 `test` 上锁，其中持锁客户端上互斥锁，请求锁客户端上共享锁。
@@ -109,16 +115,21 @@ LOCK TABLE
    ```shell
    # conn1
    obclient> START TRANSACTION;
+   Query OK, 0 rows affected
    obclient> LOCK TABLE test IN EXCLUSIVE MODE;
+   Query OK, 0 rows affected
 
    # conn2
    obclient> START TRANSACTION;
+   Query OK, 0 rows affected
    obclient> SET ob_trx_timeout = 10000000000; # 10000 秒
+   Query OK, 0 rows affected
    obclient> SET ob_query_timeout = 1000000;   # 1 秒
+   Query OK, 0 rows affected
 
    # 请求客户端在 1 秒后将报出锁冲突的错误
    obclient> LOCK TABLE test IN SHARE MODE;
-   ERROR HY000: resource busy and acquire with NOWAIT specified or timeout expired
+   ORA-30006: resource busy; acquire with WAIT timeout expired
    ```
 
 10. 在两个客户端上分别对表 `test` 上表锁，其中持锁客户端上互斥锁，请求锁客户端上共享锁，并使用 `NOWAIT` 关键字。
@@ -127,27 +138,33 @@ LOCK TABLE
     ```shell
     # conn1
     obclient> START TRANSACTION;
+    Query OK, 0 rows affected
     obclient> LOCK TABLE test IN EXCLUSIVE MODE;
+    Query OK, 0 rows affected
 
     # conn2
     obclient> START TRANSACTION;
+    Query OK, 0 rows affected
     obclient> LOCK TABLE test IN SHARE MODE NOWAIT;
-    ERROR HY000: resource busy and acquire with NOWAIT specified or timeout  expired
-    ``` 
+    ORA-00054: resource busy and acquire with NOWAIT specified or timeout expired
+    ```
   
  11. 在两个客户端上分别对表 `test` 上表锁，其中持锁客户端上互斥锁，请求锁客户端上共享锁，并使用 `WAIT N` 关键字。
     当 `LOCK TABLE` 语句设置了 `WAIT N` 关键字后，如果遇到表锁冲突将会等待 N 秒，在 N 秒后未解锁将报错，并在报错信息中体现“timeout expired”信息。该报错信息与语句不设置 `WAIT N`/`NOWAIT` 关键字不同。
 
      ```shell
      # conn1
-     start transaction;
-     lock table test in exclusive mode;
+     obclient> START TRANSACTION;
+     Query OK, 0 rows affected
+     obclient> LOCK TABLE test IN EXCLUSIVE MODE;
+     Query OK, 0 rows affected
 
      # conn2
-     start transaction;
+     obclient> START TRANSACTION;
+     Query OK, 0 rows affected
 
-     # client will get error code after 1 second
-     lock table test in share mode wait 1;
-     ERROR HY000: resource busy and acquire with NOWAIT specified or timeout expired
+     # 请求客户端在 1 秒后将报出锁冲突的错误
+     obclient> LOCK TABLE test IN SHARE MODE WAIT 1;
+     ORA-00054: resource busy and acquire with NOWAIT specified or timeout expired
      ```
 
