--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md
@@ -290,14 +290,14 @@ partition_count | subpartition_count:
   1. 登录到 sys 租户，创建一个 Unit。
   
      ```shell
-     obclient> CREATE RESOURCE UNIT IF NOT EXISTS 2c2g MAX_CPU 2, MEMORY_SIZE '2G';
+     obclient> CREATE RESOURCE UNIT IF NOT EXISTS 2c5g MAX_CPU 2, MEMORY_SIZE '5G';
      Query OK, 0 rows affected 
      ```
 
   2. 创建一个 Unit Num 为 2 的资源池。
   
      ```shell
-     obclient> CREATE RESOURCE POOL tenant_pool UNIT = '2c2g', UNIT_NUM = 2, ZONE_LIST = ('z1', 'z2', 'z3');
+     obclient> CREATE RESOURCE POOL tenant_pool UNIT = '2c5g', UNIT_NUM = 2, ZONE_LIST = ('z1', 'z2', 'z3');
      Query OK, 0 rows affected 
      ```
 
@@ -313,7 +313,7 @@ partition_count | subpartition_count:
      ```shell
      obclient> USE test;
      Database changed
-     obclient> CREATE TABLE dup_t1(c1 int) DUPLICATE_SCOPE = 'cluster';
+     obclient> CREATE TABLE dup_t1(c1 INT) DUPLICATE_SCOPE = 'cluster';
      Query OK, 0 rows affected 
      ```
 
