--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md
@@ -328,76 +328,20 @@ on_commit_option:
   Query OK, 0 rows affected 
   ```
 
-* 创建 `cluster` 级别的复制表 `dup_t1`。
+* 创建 `cluster` 级别的复制表 `dup_t1`。 像普通表一样插入和读写复制表的数据。对于一个读请求，如果使用了 Proxy，读请求可能会路由到任意一个 OBServer 节点；如果直连 OBServer 节点，只要本地副本可读，就会在直连的 OBServer 节点上执行读请求。
 
-  1. 登录到 sys 租户，创建一个 Unit。
-  
-     ```shell
-     obclient> CREATE RESOURCE UNIT IF NOT EXISTS 2c5g MAX_CPU 2, MEMORY_SIZE '5G';
-     Query OK, 0 rows affected 
-     ```
+  ```shell
+  obclient> CREATE TABLE dup_t1(c1 int) DUPLICATE_SCOPE = 'cluster';
+  Query OK, 0 rows affected 
 
-  2. 创建一个 Unit Num 为 2 的资源池。
-  
-     ```shell
-     obclient> CREATE RESOURCE POOL tenant_pool UNIT = '2c5g', UNIT_NUM = 2, ZONE_LIST = ('z1', 'z2', 'z3');
-     Query OK, 0 rows affected 
-     ```
+  obclient> INSERT INTO dup_t1 VALUES(1);
+  Query OK, 1 row affected 
 
-  3. 创建用户租户 `obuser` 并指定 Locality 分布。
- 
-     ```shell
-     obclient> CREATE TENANT obuser resource_pool_list=('tenant_pool'), LOCALITY = "F@z1, F@z2, R@z3", PRIMARY_ZONE = "z1" SET ob_tcp_invited_nodes='%';
-     Query OK, 0 rows affected 
-     ```
-
-  4. 登录到步骤 3 所创建的 `obuser` 用户租户，创建一个复制表。
-
-     ```shell
-     obclient> CREATE TABLE dup_t1(c1 int) DUPLICATE_SCOPE = 'cluster';
-     Query OK, 0 rows affected 
-     ```
-
-  5. （可选）查看广播日志流信息，复制表会创建在该日志流上。
-
-     ```shell
-     obclient> SELECT * FROM oceanbase.DBA_OB_LS WHERE FLAG LIKE "%DUPLICATE%";
-     +-------+--------+--------------+---------------+-------------+---------------------+----------+---------------------+---------------------+-----------+
-     | LS_ID | STATUS | PRIMARY_ZONE | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        | FLAG      |
-     +-------+--------+--------------+---------------+-------------+---------------------+----------+---------------------+---------------------+-----------+
-     |  1003 | NORMAL | z1;z2        |             0 |           0 | 1683267390195713284 |     NULL | 1683337744205408139 | 1683337744205408139 | DUPLICATE |
-     +-------+--------+--------------+---------------+-------------+---------------------+----------+---------------------+---------------------+-----------+
-     1 row in set 
-
-
-  6. （可选）在 sys 租户下查看复制表的副本分布，`REPLICA_TYPE` 字段为副本类型。
- 
-     ```shell
-     obclient> SELECT * FROM oceanbase.CDB_OB_TABLE_LOCATIONS WHERE TABLE_NAME = "dup_t1";
-     +-----------+---------------+------------+----------+------------+----------------+-------------------+------------+---------------+-----------+-------+------+----------------+----------+----------+--------------+-----------------+
-     | TENANT_ID | DATABASE_NAME | TABLE_NAME | TABLE_ID | TABLE_TYPE | PARTITION_NAME | SUBPARTITION_NAME | INDEX_NAME | DATA_TABLE_ID | TABLET_ID | LS_ID | ZONE | SVR_IP         | SVR_PORT | ROLE     | REPLICA_TYPE | DUPLICATE_SCOPE |
-     +-----------+---------------+------------+----------+------------+----------------+-------------------+------------+---------------+-----------+-------+------+----------------+----------+----------+--------------+-----------------+
-     |      1002 | test          | dup_t1     |   500002 | USER TABLE | NULL           | NULL              | NULL       |          NULL |    200001 |  1003 | z1   | 11.xxx.xxx.xxx |    36125 | LEADER   | FULL         | CLUSTER         |
-     |      1002 | test          | dup_t1     |   500002 | USER TABLE | NULL           | NULL              | NULL       |          NULL |    200001 |  1003 | z1   | 11.xxx.xxx.xxx  |    36124 | FOLLOWER | READONLY     | CLUSTER         |
-     |      1002 | test          | dup_t1     |   500002 | USER TABLE | NULL           | NULL              | NULL       |          NULL |    200001 |  1003 | z2   | 11.xxx.xxx.xxx |    36127 | FOLLOWER | FULL         | CLUSTER         |
-     |      1002 | test          | dup_t1     |   500002 | USER TABLE | NULL           | NULL              | NULL       |          NULL |    200001 |  1003 | z2   | 11.xxx.xxx.xxx |    36126 | FOLLOWER | READONLY     | CLUSTER         |
-     |      1002 | test          | dup_t1     |   500002 | USER TABLE | NULL           | NULL              | NULL       |          NULL |    200001 |  1003 | z3   | 11.xxx.xxx.xxx |    36128 | FOLLOWER | READONLY     | CLUSTER         |
-     |      1002 | test          | dup_t1     |   500002 | USER TABLE | NULL           | NULL              | NULL       |          NULL |    200001 |  1003 | z3   | 11.xxx.xxx.xxx  |    36129 | FOLLOWER | READONLY     | CLUSTER         |
-     +-----------+---------------+------------+----------+------------+----------------+-------------------+------------+---------------+-----------+-------+------+----------------+----------+----------+--------------+-----------------+
-     6 rows in set 
-     ```
-
-  7. 像普通表一样插入和读写复制表的数据。对于一个读请求，如果使用了 Proxy，读请求可能会路由到任意一个 OBServer 节点；如果直连 OBServer 节点，只要本地副本可读，就会在直连的 OBServer 节点上执行读请求。
-
-     ```shell
-     obclient> INSERT INTO dup_t1 VALUES(1);
-     Query OK, 1 row affected 
-
-     obclient> SELECT * FROM dup_t1;
-     +------+
-     | c1   |
-     +------+
-     |    1 |
-     +------+
-     1 row in set 
-     ```
+  obclient> SELECT * FROM dup_t1;
+  +------+
+  | c1   |
+  +------+
+  |    1 |
+  +------+
+  1 row in set 
+  ```
