V420newfeature-LOCK IN SHARE MODE

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md
@@ -17,7 +17,8 @@ SELECT
         [GROUP BY group_expression_list [WITH ROLLUP] [HAVING condition]]
         [ORDER BY order_expression_list]
         [limit_clause]
-        [FOR UPDATE [opt_for_update_wait]];
+        [FOR UPDATE [opt_for_update_wait]]
+        [LOCK IN SHARE MODE];
 
 select_expr:
  table_name.*
@@ -111,6 +112,7 @@ opt_for_update_wait:
 | \[LIMIT {\[offset,\] row_count \|row_count OFFSET offset}\]                                 | 强制 `SELECT` 语句返回指定的记录数。 `LIMIT` 接受一个或两个数字参数。参数必须是一个整数常量。 <ul><li> 如果给定两个参数，第一个参数指定第一个返回记录行的偏移量，第二个参数指定返回记录行的最大数目。 初始记录行的偏移量是 0。   </li>   <li>  如果只给定一个参数，它表示返回记录行的最大数目，偏移量为 0。 </li></ul>                                                                                                                    |
 | FOR UPDATE                                                                                  | 对查询结果所有行上排他锁，以阻止其他事务的并发修改，或阻止在某些事务隔离级别时的并发读取。 <ul><li> `WAIT`：表示等待其他事务释放资源的时间，如果超过该时间，则返回无法获得资源，单位为秒。   </li>   <li>  `NOWAIT` \| `NO_WAIT`：表示不等待其他事务释放资源，直接返回无法获得资源。  </li></ul>                                                                                                                                                            |
 | PARTITION(partition_list)                                                                   | 指定查询表的分区信息。例如 `partition(p0,p1...)`。                                                                                                                                                                                                                                                                                                                                                                                |
+| LOCK IN SHARE MODE | 锁定查询结果。|
 
 ## 示例
 
@@ -235,9 +237,22 @@ opt_for_update_wait:
   obclient> SELECT * FROM a LIMIT 1 FOR UPDATE;
   ```
 
-*
-  如果您使用了 `ORDER BY` 子句对查询结果进行排序，则会先对结果进行排序，然后再执行 `LIMIT 1`，因此这种情况下，会为选择的所有行加锁。
+* 如果您使用了 `ORDER BY` 子句对查询结果进行排序，则会先对结果进行排序，然后再执行 `LIMIT 1`，因此这种情况下，会为选择的所有行加锁。
 
   ```sql
   obclient> SELECT * FROM a ORDER BY id LIMIT 1 FOR UPDATE;
+  ```
+
+* 使用 `LOCK IN SHARE MODE` 锁定对表 `a` 的查询结果。
+
+  ```shell
+  obclient> SELECT * FROM a LOCK IN SHARE MODE;
+  +------+------+------+
+  | id   | name | num  |
+  +------+------+------+
+  |    1 | a    |  100 |
+  |    2 | b    |  200 |
+  |    3 | a    |  50 |
+  +------+------+------+
+  1 row in set
   ```
