V420newfeature-table_alias_name

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md
@@ -37,7 +37,7 @@ table_reference:
     | table_name@dblink_name
 
 simple_table:
-    table_factor [partition_option] [[table_alias_name]
+    (table_factor [partition_option])[table_alias_name]
     | (select_stmt)  table_alias_name
     | (table_reference_list)
 
@@ -117,6 +117,7 @@ unpivot_in_clause：
 | select_expr_list                    | 指定从数据库列出要查询的表达式或列名，用","隔开。"\*"表示所有列。 <ul><li> `table_name.*`：指定从指定的表、视图中选择所有的列。   </li><li> `table_alias_name.`：指定表、视图的别名。   </li><li> `expr [[AS] column_alias_name]`：指定查询列或表达式的别名，`AS` 是可选的。 </li></ul>                                                                                                                                                                                                                                                |
 | FROM table_references               | 指定选择数据的对象。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
 | PARTITION(partition_list)           | 指定查询表的分区信息。例如：`partition(p0,p1...)`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
+| table_factor | 指定表名（基表、可更新视图、特殊子查询）。|
 | table_alias_name                    | 指定选择数据对象的别名，格式为原名称空格别名。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 | joined_table                        | 指定多表查询的联接方式。 <ul><li> `[INNER] JOIN` 为内联接，`INNER` 为可选项。仅返回满足联接条件的数据。   </li><li> `[OUTER] JOIN` 为外联接，`OUTER` 为可选项。 </li><li> `LEFT [OUTER]` 表示左外联接。返回左表中的所有公共列值。   </li><li> `RIGHT [OUTER]` 表示右外联接。返回右表中的所有公共列值。   </li><li> `FULL [OUTER]` 表示全外联接。即除了内联接之外，两个表中未在内联接结果中返回的行将被保留并用空值扩展。 </li></ul>                                                                  |
 | ON expression                       | 指定多表联接的联接条件。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
@@ -470,3 +471,21 @@ unpivot_in_clause：
     +-------+-------+
     2 rows in set
     ```
+
+* 查询表 `t1` 的数据并指定表别名。
+
+  ```shell
+  obclient> CREATE TABLE t1 (c1 INT, c2 INT );
+  Query OK, 0 rows affected 
+
+  obclient> INSERT INTO t1 VALUES ('1','2');
+  Query OK, 1 row affected 
+
+  obclient> SELECT * FROM (t1) a;
+  +------+------+
+  | C1   | C2   |
+  +------+------+
+  |    1 |    2 |
+  +------+------+
+  1 row in set
+  ```
