--- a/zh-CN/7.reference/7.command-line-tools/11.cdc/2.obcdc/2.obcdc-parameters/1.general-obcdc-configuration-items.md
+++ b/zh-CN/7.reference/7.command-line-tools/11.cdc/2.obcdc/2.obcdc-parameters/1.general-obcdc-configuration-items.md
@@ -9,6 +9,9 @@
 | cluster_url                                | 连接 OceanBase | 当 OceanBase 具有 cluster url；obcdc 用于获取 rootserver 信息，支持 server 高可用。                                                                             |
 | cluster_user                               | 连接 OceanBase | 需配置 sys 租户下的用户，具有内部表（oceanbase 库）的读权限。                                                                                                             |
 | cluster_password                           | 连接 OceanBase | 上述 sys 租户下的用户对应的密码。                                                                                                                               |
+| tenant_endpoint                           | 连接对应租户 | 租户所在的机器列表。                                                                                                                             |
+| tenant_user                           | 连接对应租户 | 租户用户名。                                                                                                                              |
+| tenant_password                           | 连接对应租户 | 对应上述租户用户名的密码。                                                                                                                               |
 | config_fpath                               | 配置持久化        | obcdc 所有配置信息会 dump 到该文件。                                                                                                                       |
 | working_mode                               | 工作模式         | 工作模式：默认为持久化模式。                                   |
 | store_service_path                         | 工作模式         | 持久化数据的存放路径：仅持久化模式下生效。 相对路径：存储在调用 obcdc 的进程所在路径下的相对路径。 绝对路径：存储在指定的绝对路径下，比如 `store_service_path=/data/1`。        |
