--- a/zh-CN/7.reference/7.command-line-tools/11.cdc/2.obcdc/2.obcdc-parameters/2.obcdc-configuration-items.md
+++ b/zh-CN/7.reference/7.command-line-tools/11.cdc/2.obcdc/2.obcdc-parameters/2.obcdc-configuration-items.md
@@ -16,6 +16,9 @@
 | cluster_url                          | 启动时指定的 cluster url                | `|`（英文半角）                  | 否      | 当 OceanBase 具有 cluster url;obcdc 用于获取 rootserver 信息，支持  server 高可用。                          |
 | cluster_user                         | sys 租户下用户名                        | 空（用户指定，必填）                    | 否      | 需配置 sys 租户下的用户，具有内部表（oceanbase 库）的读权限。                                                           |
 | cluster_password                     | 上述用户的密码                           | 空（用户指定，必填）                    | 否      |                                                                                                |
+| tenant_endpoint                     | 租户所在的机器列表                           | `|`（英文半角）                     | 否      | 格式：host1:sql_port1\|host2:sql_port2                                                                          |
+| tenant_user                        | 租户用户名                           | `|`（英文半角）                     | 否      | 格式：`user_name@tenant_name` 或者`user_name@tenant_name#cluster`                                                                                 |
+| tenant_password                     | 对应上述租户用户名的密码                           | `|`（英文半角）                     | 否      |                                                                                                |
 | config_fpath                         | 配置文件 dump 路径                      | etc/liboblog.conf             | 否      | obcdc 所有配置信息会 dump 到该文件。                                                                    |
 | timezone                             | obcdc 所属时区                     | +8:00                         | 否      | 影响数据格式化输出的时区，需和数据源配置保持一致， 默认东 8 区。                                                             |
 | timezone_info_path                             | 用于指定 timezone 元信息文件所在目录                     | etc/timezone_info.conf                         | 是      | meta_data_refresh_mode 为data_dict 时，需要将 RPM 包中的 timezone_info.conf 文件放入该目录下。                                                             |
