--- a/zh-CN/2.quick-start/0.Quickly-experience-OceanBase.md
+++ b/zh-CN/2.quick-start/0.Quickly-experience-OceanBase.md
@@ -8,7 +8,7 @@
 
 | 项目 | 描述 |
 | --- | --- |
-|系统|<ul><li>Alibaba Cloud Linux 2/3 版本（内核 Linux 3.10.0 版本及以上）</li><li>Red Hat Enterprise Linux Server 7.X 版本（内核 Linux 3.10.0 版本及以上）</li><li>CentOS Linux 7.X 版本及以上版本（内核 Linux 3.10.0 版本及以上）</li><li>KylinOS V10 版本<li>龙蜥 AnolisOS 8.6 版本及以上</li><li>统信 UOS 1020a/1021a/1021e/1001c 版本</li><li>中科方德 NFSChina 4.0 版本及以上</li><li>浪潮 Inspur kos 5.8 版本</li><li>中移动 BCLinux BigCloud Enterprise Linux For Euler 21.10 LTS</li></ul>|
+|系统|<ul><li>Alibaba Cloud Linux 2/3 版本（内核 Linux 3.10.0 版本及以上）</li><li>Anolis OS 8.X 版本（内核 Linux 3.10.0 版本及以上）</li><li>SUSE / OpenSUSE 15.X 版本及以上版本（内核 Linux 3.10.0 版本及以上） </li><li>Red Hat Enterprise Linux Server 7.X 版本、8.X 版本（内核 Linux 3.10.0 版本及以上）</li><li>CentOS Linux 7.X 版本、8.X 版本（内核 Linux 3.10.0 版本及以上）</li><li>Debian 9.X 版本及以上版本（内核 Linux 3.10.0 版本及以上）</li><li>Ubuntu 20.X 版本及以上版本（内核 Linux 3.10.0 版本及以上）</li><li>KylinOS V10 版本</li><li>统信 UOS 1020a/1021a/1021e/1001c 版本</li><li>中科方德 NFSChina 4.0 版本及以上</li><li>浪潮 Inspur kos 5.8 版本</li></ul>|
 |CPU|测试环境最低要求 2 核，推荐 4 核及以上。|
 |内存|测试环境最低要求 8 G，推荐 16G 及以上。|
 |磁盘类型|推荐使用 SSD。|
