--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/11.alter-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/11.alter-tablegroup-of-oracle-mode.md
@@ -146,7 +146,7 @@
   Query OK, 0 rows affected
   ```
 
-  由于表组 `tblgroup3` 中 `tbl1` 和 `tbl2` 的二级分区个数不同，所以 `SHARDING` 属性可以更改为`PARTITION`，但是不能更改为 `ADAPTIVE`。
+  由于表组 `tblgroup3` 中 `tbl1` 和 `tbl2` 的一级分区的分区类型相同，二级分区分区类型不同（二级分区个数不同），所以 `SHARDING` 属性可以更改为 `PARTITION`，但是不能更改为 `ADAPTIVE`。
 
   ```shell
   obclient> ALTER TABLEGROUP tblgroup3 SHARDING = 'PARTITION';
