--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
@@ -34,7 +34,7 @@
 
 ## 示例
 
-* 创建名为 `tblgroup1` 的表组，其 `SHARDING` 属性为 `NONE`，并将分区表 `tbl1`和分区表 `tbl2` 加入到表组中。
+* 创建名为 `tblgroup1` 的表组，其 `SHARDING` 属性为 `NONE`，并将分区表 `tbl1` 和分区表 `tbl2` 加入到表组中。
 
   ```shell
   obclient> CREATE TABLEGROUP tblgroup1 SHARDING = 'NONE'; 
@@ -142,7 +142,7 @@
   Query OK, 0 rows affected
   ```
 
-  由于表组 `tblgroup3` 中 `tbl1` 和 `tbl2` 的二级分区个数不同，所以 `SHARDING` 属性可以更改为`PARTITION`，但是不能更改为 `ADAPTIVE`。
+  由于表组 `tblgroup3` 中 `tbl1` 和 `tbl2` 的一级分区的分区类型相同，二级分区分区类型不同（二级分区个数不同），所以 `SHARDING` 属性可以更改为 `PARTITION`，但是不能更改为 `ADAPTIVE`。
 
   ```shell
   obclient> ALTER TABLEGROUP tblgroup3 SHARDING = 'PARTITION';
