--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
@@ -6,8 +6,6 @@
 
 表组主要用于创建一组具有相同分布特征的表，具有相同分布特征的表在进行连接操作时，可以在本地进行，避免跨节点的数据请求。
 
-创建表组时，首先要规划好表组的用途。如果是用于普通表的属性，表组就不用分区；如果是用于分区表的属性，表组就要指定分区策略，并且要跟分区表的分区策略保持一致。
-
 
 ## 语法
 
@@ -23,7 +21,7 @@ tablegroup_option:
 
 |           **参数**           |    **描述**    |
 |----------------------------|---------------------------------|
-| tablegroup_name            | 表组名称，最长 64 个字符，字符只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能使用 OceanBase 数据库的关键字。  |
+| tablegroup_name            | 表组名称，最长 64 个字符，字符只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能使用 OceanBase 数据库的关键字。如果要创建的表组名称已存在，并且没有指定 `IF NOT EXISTS`，则会出现错误。  |
 | SHARDING   | 表组的属性。如果不指定 `SHARDING` 属性，则默认创建 `ADAPTIVE` 的表组。`SHARDING` 取值如下：<ul><li>`NONE`：对加入表组的表没有限制。</li><li>`PARTITION`：加入表组的表对应的一级分区，需要与表组中所有表的一级分区的分区方式一致，包括分区类型、分区个数和分区 Value。</li><li>`ADAPTIVE`：加入表组的表对应的一级分区和二级分区，需要与表组中所有表的一级分区和二级分区的分区方式一致，包括分区类型、分区个数和分区 Value。</li></ul>相同的分区方式包括：<ul><li>分区类型相同（例如都是 Hash+Range 分区）。</li><li>如果是 Hash 分区，要求引用的列数相同，并且分区个数相同。</li><li>如果是 Range 分区，要求引用的列数相同，并且分区数相同，Range 分割点相同。</li></ul>对于二级分区，根据其分区类型，要求和上述一致。    |
 
 ## 示例
@@ -183,7 +181,7 @@ tablegroup_option:
   ORA-00600: internal error code, arguments: -4179, not all tables are non-partitioned or partitioned, add table to tablegroup not allowed
   ```
 
-* 创建名为 `tblgroup7` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，由于分区表 `tbl1` 和分区表 `tbl2` 的分区个数不同，不能同时加入到表组中。
+* 创建名为 `tblgroup7` 的表组，其 `SHARDING` 属性为 `ADAPTIVE`，由于分区表 `tbl1` 和分区表 `tbl2` 的一级分区的分区类型相同，二级分区分区类型不同（二级分区个数不同），不能同时加入到表组中。
 
   ```shell
   obclient> CREATE TABLEGROUP tblgroup7 SHARDING = 'ADAPTIVE'; 
