--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
@@ -148,7 +148,7 @@
    Empty set
    ```
     
-   有关 `GV$OB_LOG_STAT` 视图字段的详细介绍，请参见 [GV$OB_LOG_STAT](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/114.gv-ob_log_stat-of-mysql-mode.md)。
+   有关 `GV$OB_LOG_STAT` 视图字段的详细介绍，请参见 [GV$OB_LOG_STAT](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/120.gv-ob_log_stat-mysql.md)。
 
    如果查询结果为空，则表示所有日志流都有仲裁成员，仲裁服务可用；如果查询结果不为空，此时 Root Service 会在后台为这些日志流补仲裁成员，您可以通过 `CDB_OB_LS_ARB_REPLICA_TASKS` 视图进一步确认是否有正在执行补仲裁成员的任务，如果确认补仲裁成员的任务存在且正在执行，需要等待任务执行完成。
    
