--- a/en-US/6.manage/6.backup-and-recovery/3.log-archive/8.view-parameters-of-log-archive.md
+++ b/en-US/6.manage/6.backup-and-recovery/3.log-archive/8.view-parameters-of-log-archive.md
@@ -16,14 +16,12 @@ The `CDB` view is a cluster view where you can view the archiving parameter sett
    | TENANT_ID | DEST_NO | NAME                  | VALUE                                                                                                                   |
    +-----------+---------+-----------------------+-------------------------------------------------------------------------------------------------------------------------+
    |      1002 |       0 | binding               | OPTIONAL                                                                                                                |
-   |      1002 |       0 | checkpoint_interval   | 1d                                                                                                                      |
-   |      1002 |       0 | dest_id               | 2                                                                                                                       |
+   |      1002 |       0 | dest_id               | 1002                                                                                                                    |
    |      1002 |       0 | path                  | file:///data/nfs/backuparchive                                                                                          |                
    |      1002 |       0 | piece_switch_interval | 1d                                                                                                                      |
    |      1002 |       0 | state                 | ENBALE                                                                                                                  |
    |      1004 |       0 | binding               | Mandatory                                                                                                               |
-   |      1004 |       0 | checkpoint_interval   | 2m                                                                                                                      |
-   |      1004 |       0 | dest_id               | 1                                                                                                                       |
+   |      1004 |       0 | dest_id               | 1001                                                                                                                    |
    |      1004 |       0 | path                  | oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging     |
    |      1004 |       0 | piece_switch_interval | 1d                                                                                                                      |
    |      1004 |       0 | state                 | ENBALE                                                                                                                  |
@@ -36,7 +34,7 @@ The `CDB` view is a cluster view where you can view the archiving parameter sett
    Statement for configuring the `LOG_ARCHIVE_DEST` parameter for tenant `1002`:
 
    ```sql
-   obclient> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive BINDING=Optional CHECKPOINT_INTERVAL=2m PIECE_SWITCH_INTERVAL=1d';
+   obclient> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive BINDING=Optional PIECE_SWITCH_INTERVAL=1d';
    ```
 
    The system assigns `2` to `dest_id` for this path. Archiving is enabled for this path. 
@@ -44,7 +42,7 @@ The `CDB` view is a cluster view where you can view the archiving parameter sett
    Statement for configuring the `LOG_ARCHIVE_DEST` parameter for tenant `1004`:
 
    ```shell
-   obclient> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging BINDING=Mandatory CHECKPOINT_INTERVAL=2m PIECE_SWITCH_INTERVAL=1d';
+   obclient> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging BINDING=Mandatory PIECE_SWITCH_INTERVAL=1d';
    ```
 
    The system assigns `1` to `dest_id` for this path. Archiving is enabled for this path. 
@@ -72,13 +70,12 @@ You can query the `oceanbase.DBA_OB_ARCHIVE_DEST` view from a user tenant in MyS
    | DEST_NO | NAME                  | VALUE                           |
    +---------+-----------------------+---------------------------------+
    |       0 | binding               | OPTIONAL                        |
-   |       0 | checkpoint_interval   | 1d                              |
-   |       0 | dest_id               | 2                               |
+   |       0 | dest_id               | 1002                            |
    |       0 | path                  | file:///data/nfs/backup/archive |
    |       0 | piece_switch_interval | 1d                              |
    |       0 | state                 | ENBALE                          |
    +---------+-----------------------+---------------------------------+
-   6 rows in set
+   5 rows in set
    ```
 
 ## More information
