--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/1.performance-view-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/1.performance-view-overview-of-oracle-mode.md
@@ -60,7 +60,7 @@
 
 |                                  视图名                                   |                                 功能描述                                 |
 |------------------------------------------------------------------------|----------------------------------------------------------------------|
-| [GV$OB_LOG_STAT](93.gv-ob_log_stat-of-oracle-mode.md) | 展示 Palf 的状态。                                                                |
+| [GV$OB_LOG_STAT](105.gv-ob_log_stat-oracle.md) | 展示 Palf 的状态。                                                                |
 | [V$OB_LOG_STAT](94.v-ob_log_stat-of-oracle-mode.md)      | 展示 Palf 的状态。 |
 
 ## 监控信息
