--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.1.disk-performance-calibration-of-mysql-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.1.disk-performance-calibration-of-mysql-mode.md
@@ -98,9 +98,10 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
 
    磁盘 I/O 校准状态分为以下几种：
 
-   * `NOT AVAILABLE`：表示 I/O 校准功能无法使用。
+   * `NOT AVAILABLE`：表示未开始 I/O 校准。
    * `IN PROGRESS`：表示正在进行 I/O 校准。
    * `READY`：表示 I/O 校准已完成。
+   * `FAILED`：表示 I/O 校准执行失败。
    
    从查询结果可知，`STATUS` 字段的值为 `IN PROGRESS`，表示正在进行磁盘 I/O 校准。待磁盘 I/O 校准完成后，`STATUS` 字段的值会变成 `READY`，表示磁盘校准已完成，同时 `FINISH_TIME` 字段中会显示完成时间。
 
@@ -319,9 +320,10 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
 
    磁盘 I/O 校准状态分为以下几种：
 
-   * `NOT AVAILABLE`：表示 I/O 校准功能无法使用。
+   * `NOT AVAILABLE`：表示未开始 I/O 校准。
    * `IN PROGRESS`：表示正在进行 I/O 校准。
    * `READY`：表示 I/O 校准已完成。
+   * `FAILED`：表示 I/O 校准执行失败。
    
    从查询结果可知，`STATUS` 字段的值为 `IN PROGRESS`，表示正在进行磁盘 I/O 校准。待磁盘 I/O 校准完成后，`STATUS` 字段的值会变成 `READY`，表示磁盘校准已完成，同时 `FINISH_TIME` 字段中会显示完成时间。
 
