--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/4.union-clause-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/4.union-clause-of-mysql-mode.md
@@ -22,7 +22,7 @@ select_clause_set:
 | limit_clause            | 指定集合计算后返回的行数。                                                                              |
 | UNION ALL               | 合并两个查询的结果。                                                                                 |
 | UNION                   | 合并两个查询的结果，并去重。                                                                             |
-| MINUS \| EXCEPT         | 从左查询结果集中去重出现在右查询中的结果，并去重。<br> **说明**  `MINUS` 是 `EXPECT` 的同义词。 |
+| MINUS \| EXCEPT         | 从左查询结果集中去重出现在右查询中的结果，并去重。<br> **说明**  `MINUS` 是 `EXCEPT` 的同义词。 |
 | INTERSECT               | 保留左查询结果集中出现在右查询中的结果，并去重。                                                                   |
 
 ## 示例
