--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/2.archivelog.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/2.archivelog.md
@@ -11,10 +11,10 @@
 
 ```sql
 /*系统租户为指定租户（不包含 sys 租户本身）配置归档目的端*/
-ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INRERVAL=xxx] [BINDING=xxx]' TENANT = tenant_name;
+ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=archive_path [PIECE_SWITCH_INRERVAL=piece_switch_interval] [BINDING=archive_mode]' TENANT = tenant_name;
 
 /*用户租户配置本租户的归档目的端*/
-ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INRERVAL=xxx] [BINDING=xxx]';
+ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=archive_path [PIECE_SWITCH_INRERVAL=piece_switch_interval] [BINDING=archive_mode]';
 ```
 
 ### 开启归档模式
@@ -48,10 +48,10 @@ ALTER SYSTEM NOARCHIVELOG;
 | 字段 | 说明 |
 | --- | --- |
 | LOG_ARCHIVE_DEST | 配置日志归档的目的端。 |
-| LOCATION  | 指定归档目的端。
+| archive_path  | 指定归档目的端。
 目前 OceanBase 数据库支持的归档目的端介质为 NFS 和阿里云 OSS。 |
-| BINDING  | 设置归档和业务的优先模式。目前支持 Optional 模式和 Mandatory 模式。如果不配置，默认为 Optional 模式。<ul> <li>Optional 模式：表示以用户业务优先。在该模式下，当归档（日志归档）速度跟上不日志生成的速度时，日志有可能来不及归档就被回收了，然后发生断流。</li> <li> Mandatory 模式：表示以归档优先。在该模式下如果归档跟不上用户数据的写入，可能会导致用户无法写入。</li></ul> |
-| PIECE_SWITCH_INTERVAL | 配置 piece 的切换周期，取值范围为 \[1d, 7d\]。如果不设置，默认为 1d。 |
+| archive_mode | 设置归档和业务的优先模式。目前支持 Optional 模式和 Mandatory 模式。如果不配置，默认为 Optional 模式。<ul> <li>Optional 模式：表示以用户业务优先。在该模式下，当归档（日志归档）速度跟上不日志生成的速度时，日志有可能来不及归档就被回收了，然后发生断流。</li> <li> Mandatory 模式：表示以归档优先。在该模式下如果归档跟不上用户数据的写入，可能会导致用户无法写入。</li></ul> |
+| piece_switch_interval | 配置 piece 的切换周期，取值范围为 \[1d, 7d\]。如果不设置，默认为 1d。 |
 | tenant_name | 指定租户名称。 |
 
 ## 示例
