--- a/zh-CN/7.reference/3.performance-tuning-guide/4.business-model-tuning/3.distributed-transactions.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/4.business-model-tuning/3.distributed-transactions.md
@@ -28,7 +28,7 @@ request_time > time_to_usec('2021-08-24 18:00:00') group by plan_type;
 4 rows in set 
 ```
 
-其中，`plan_type` = 1、2、3、4 分别表示 Local 、Remote 、Distribute 和 Uncertain 执行计划。一般来讲，0 代表无 plan 的 SQL 语句，比如：set autocommit=0/1，commit 等。
+其中，`plan_type` = 1、2、3 分别表示 Local 、Remote 、Distribute 执行计划。一般来讲，0 代表无 plan 的 SQL 语句，比如：set autocommit=0/1，commit 等。
 
 ## 非 local 计划分析
 
